Week8
Change contains: * Added more features