@@ -3,11 +3,13 @@ package com.example.musify.service;
 import com.example.musify.dto.LoginRequestDTO;
 import com.example.musify.dto.UserDTO;
 import com.example.musify.dto.UserRegisterDTO;
+import com.example.musify.exception.UnauthorizedException;
 import com.example.musify.mapper.UserMapper;
 import com.example.musify.model.Role;
 import com.example.musify.model.Status;
 import com.example.musify.model.User;
 import com.example.musify.repository.springdata.UserRepository;
+import com.example.musify.security.AuthorizationVerifier;
 import com.example.musify.security.JwtUtils;
 
 import org.springframework.beans.factory.annotation.Autowired;
@@ -17,10 +19,12 @@ import org.webjars.NotFoundException;
 
 import javax.transaction.Transactional;
 import java.util.List;
+import java.util.UnknownFormatConversionException;
 import java.util.stream.Collectors;
 
 @Service
 public class UserService implements IUserService {
+    private static final String ERROR_MESSAGE = "You do not have permission for this request.";
     @Autowired
     private UserRepository userRepository;
 
@@ -34,7 +38,10 @@ public class UserService implements IUserService {
     private JwtUtils jwtUtils;
 
     public List<UserDTO> getAllUsers() {
-        return userRepository.findAll().stream().map(userMapper::toUserDTO).collect(Collectors.toList());
+        return userRepository.findAll()
+                .stream()
+                .map(userMapper::toUserDTO)
+                .toList();
     }
 
     @Override
@@ -60,19 +67,19 @@ public class UserService implements IUserService {
 
     @Override
     @Transactional
-    public UserDTO updateUserToDeleted(Integer id, String token) throws IllegalArgumentException {
-        if (jwtUtils.getIdFromToken(token).equals(id) || jwtUtils.getRoleFromToken(token).equals(Role.ADMIN)) {
+    public UserDTO updateUserToDeleted(Integer id) throws UnauthorizedException {
+        if (JwtUtils.getUserIdFromSession().equals(id) || AuthorizationVerifier.isAdmin()) {
             User user = userRepository.getById(id);
             user.setStatus(Status.DELETED);
             return userMapper.toUserDTO(user);
         }
-        throw new IllegalArgumentException("You do not have permission for this request.");
+        throw new UnauthorizedException(ERROR_MESSAGE);
     }
 
     @Override
     @Transactional
-    public UserDTO updateUser(Integer id, UserDTO userDTO, String token) throws IllegalArgumentException {
-        if (jwtUtils.getIdFromToken(token).equals(id) || jwtUtils.getRoleFromToken(token).equals(Role.ADMIN)) {
+    public UserDTO updateUser(Integer id, UserDTO userDTO) throws UnauthorizedException {
+        if (JwtUtils.getUserIdFromSession().equals(id) || AuthorizationVerifier.isAdmin()) {
             User user = userRepository.getById(id);
             if (!userDTO.getFirstName().equals("")) {
                 user.setFirstName(userDTO.getFirstName());
@@ -88,7 +95,7 @@ public class UserService implements IUserService {
             }
             return userMapper.toUserDTO(user);
         }
-        throw new IllegalArgumentException("You do not have permission for this request.");
+        throw new UnauthorizedException(ERROR_MESSAGE);
     }
 
     @Override
@@ -104,8 +111,8 @@ public class UserService implements IUserService {
 
     @Override
     @Transactional
-    public UserDTO saveAdminUser(UserRegisterDTO userDTO, String token) throws IllegalArgumentException {
-        if (jwtUtils.getRoleFromToken(token).equals(Role.ADMIN)) {
+    public UserDTO saveAdminUser(UserRegisterDTO userDTO) throws UnauthorizedException {
+        if (AuthorizationVerifier.isAdmin()) {
             User user = userMapper.toUserEntity(userDTO);
             user.setPassword(passwordEncoder.encode(user.getPassword()));
             user.setStatus(Status.ACTIVE);
@@ -113,22 +120,22 @@ public class UserService implements IUserService {
             return userMapper.toUserDTO(userRepository.save(user));
         }
 
-        throw new IllegalArgumentException("You do not have permission for this request.");
+        throw new UnauthorizedException(ERROR_MESSAGE);
 
     }
 
     @Override
     @Transactional
-    public UserDTO saveMainAdminUser(UserRegisterDTO userDTO) throws IllegalArgumentException{
+    public UserDTO saveMainAdminUser(UserRegisterDTO userDTO) throws UnauthorizedException {
 
-        if(userRepository.findAll().isEmpty()) {
+        if (userRepository.findAll().isEmpty()) {
             User user = userMapper.toUserEntity(userDTO);
             user.setPassword(passwordEncoder.encode(user.getPassword()));
             user.setStatus(Status.ACTIVE);
             user.setRole(Role.ADMIN);
             return userMapper.toUserDTO(userRepository.save(user));
         }
-        throw new IllegalArgumentException("You do not have permission for this request.");
+        throw new UnauthorizedException(ERROR_MESSAGE);
 
     }
 }
